Make action menu visible when at the bottom of document list Fixes #399

--- a/app/assets/stylesheets/sufia/_file-listing.scss
+++ b/app/assets/stylesheets/sufia/_file-listing.scss
@@ -7,3 +7,11 @@
   overflow: auto;
   padding-bottom: 0;
 }
+
+#documents {
+  overflow: visible;
+}
+
+#documents .table-responsive {
+  overflow: visible;
+}
